fix(styles): Удаление text-wrap из body

--- a/src/assets/styles/_html.scss
+++ b/src/assets/styles/_html.scss
@@ -10,7 +10,6 @@ body {
   font-weight: 500;
   height: 100%;
   line-height: 2.4rem;
-  text-wrap: pretty;
 }
 
 img {
